--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>keybridge.lib</groupId>
   <artifactId>protocol-paws</artifactId>
-  <version>0.2.2</version>
+  <version>0.2.3</version>
   <packaging>jar</packaging>
 
   <name>lib-protocol-paws</name>
@@ -17,6 +17,7 @@
     v0.2.0 - add custom PawsChannel object, reorganize AVAIL_SPECTRUM_RESP to make it usable
     v0.2.1 - add timeRange field (EventTime object) to PawsChannel
     v0.2.2 - add fields second adj channel, query position, enforcement attribute
+    v0.2.3 - add exception attribute to paws channel to indicate processing error
   </description>
 
   <organization>
