--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     v0.2.1 - add timeRange field (EventTime object) to PawsChannel
     v0.2.2 - add fields second adj channel, query position, enforcement attribute
     v0.2.3 - add exception attribute to paws channel to indicate processing error
+    v0.3.0 - upgrade JTS to 1.16.1 refctor to org.locationtech.jts
   </description>
 
   <organization>
@@ -33,14 +34,14 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.vividsolutions</groupId>
-      <artifactId>jts</artifactId>
-      <version>1.13</version>
+      <groupId>org.locationtech.jts</groupId>
+      <artifactId>jts-core</artifactId>
+      <version>1.16.1</version>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>xml-adapter</artifactId>
-      <version>1.0.3</version>
+      <version>3.0.1</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -48,7 +49,7 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
- 
+
   </dependencies>
 
   <distributionManagement>
