--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>keybridge.lib</groupId>
   <artifactId>ietf-paws</artifactId>
-  <version>0.7.0</version>
+  <version>0.8.0</version>
   <packaging>jar</packaging>
 
   <name>lib-ietf-paws</name>
@@ -23,6 +23,7 @@
     v0.5.0 - refactor code into 'lib' package, add package-info to specify namespace
     v0.6.0 - add etsi and fcc enumerated types; rewrite device descriptor
     v0.7.0 - add PawsInfo class for information queries; extend AntennaCharacteristics
+    v0.8.0 - update DeviceOwner to use LDAP distinguished names instead of VCARD format
 
 
 
