--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>keybridge.lib</groupId>
   <artifactId>ietf-paws</artifactId>
-  <version>0.10.0</version>
+  <version>0.11.0</version>
   <packaging>jar</packaging>
 
   <name>lib-ietf-paws</name>
@@ -26,7 +26,7 @@
     v0.8.0 - update DeviceOwner to use LDAP distinguished names instead of VCARD format
     v0.9.0 - add Ised device descriptor for Canada operation
     v0.10.0 - update element vs. attribute use; use TreeSet to ensure proper sorting
-
+    v0.11.0 add spectrum use nofity and response messages
 
   </description>
 
