--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>keybridge.lib</groupId>
   <artifactId>ietf-paws</artifactId>
-  <version>0.11.0</version>
+  <version>0.12.0</version>
   <packaging>jar</packaging>
 
   <name>lib-ietf-paws</name>
@@ -27,6 +27,8 @@
     v0.9.0 - add Ised device descriptor for Canada operation
     v0.10.0 - update element vs. attribute use; use TreeSet to ensure proper sorting
     v0.11.0 - add spectrum use; registration; validation request and response messages
+    v0.12.0 - rewrite several classes to better support operation; add validators
+    
 
   </description>
 
