--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>keybridge.lib</groupId>
   <artifactId>ietf-paws</artifactId>
-  <version>0.15.0</version>
+  <version>0.16.0</version>
   <packaging>jar</packaging>
 
   <name>lib-ietf-paws</name>
@@ -31,6 +31,8 @@
     v0.13.0 - rename PawsChannel and PawsInfo to SpectrumChannel and SpectrumInfo objects; move to PAWS package
     v0.14.0 - use camelcase xml types for messages; makes soap client mode sensible
     v0.15.0 - add FCC and ISED enumerated device types; integrate into FCC and ISED device descriptors
+    v0.16.0 - add AvailableSpectrumResponse::responseType field to specify how the spectrum information may be used
+    - change scope of jts-core and xml-adapter to `provided`
   </description>
 
   <organization>
@@ -49,11 +51,13 @@
       <groupId>org.locationtech.jts</groupId>
       <artifactId>jts-core</artifactId>
       <version>1.16.1</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>xml-adapter</artifactId>
       <version>3.0.1</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
