--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,13 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
-
+    <dependency>
+      <groupId>keybridge.lib</groupId>
+      <artifactId>xml-adapter</artifactId>
+      <version>3.0.1</version>
+      <scope>test</scope>
+      <type>jar</type>
+    </dependency>
   </dependencies>
 
   <distributionManagement>
