--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>keybridge.lib</groupId>
   <artifactId>ietf-paws</artifactId>
-  <version>0.19.0</version>
+  <version>0.20.0</version>
   <packaging>jar</packaging>
 
   <name>lib-ietf-paws</name>
@@ -35,7 +35,8 @@
     - change scope of jts-core and xml-adapter to `provided`
     v0.17.0 - copy all xml adapters local into `adapter` package
     v0.18.0 - add AbstractChannel to support Spectrum Channel and Info use
-    v0.19.0 - move fastPoll enforcement flag from Info to Channel
+    v0.19.0 - (undone in v0.20.0) move fastPoll enforcement flag from Info to Channel
+    v0.20.0 - rewrite SpectrumInfo to use new SpectrumConsumer class; provides improved detail
 
 
   </description>
