--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
     v0.18.0 - add AbstractChannel to support Spectrum Channel and Info use
     v0.19.0 - (undone in v0.20.0) move fastPoll enforcement flag from Info to Channel
     v0.20.0 - rewrite SpectrumInfo to use new SpectrumConsumer class; provides improved detail
+    - add additional validation checks
 
 
   </description>
