--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,9 @@
     - add additional validation checks
     - rename DeviceDesc:deviceType to deviceMode
     - add 'allowed' field to SpectrumInfo
-
+    - use Duration in EventTime; add default LPA durations to RuleSetInfo
+    - change FrequencyRange unit of measure from Hertz to MHz
+    - add EventTime `timeRange` field to DeviceCapabilities to better support LPA requests
 
   </description>
 
