- add Error element to all message responses

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
     - change FrequencyRange unit of measure from Hertz to MHz
     - add EventTime `timeRange` field to DeviceCapabilities to better support LPA requests
     - add `communicatingWith` device descriptor to support US Mode2 operation
+    - add Error element to all message responses
 
   </description>
 
