--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,8 @@
     - add Error element to all message responses
     v0.21.0 - consolidate deviceDescriptor subclasses into one
     - rename enumerated deviceType to deviceMode
+    - add spectrumUseNotify validate method to ensure transmit channel power is provided
+    - add request message content validation methods
 
 
   </description>
